--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/output.css">
-    <link rel="stylesheet" href="assets/input.css">
     <title>WebCake</title>
 </head>
 
-<body class="bg-gray-100 min-h-screen flex flex-col">
+<body class="min-h-screen flex flex-col">
+    <!-- navbar -->
     <nav class="bg-white w-full">
         <div class="mx-auto py-4 max-w-screen-xl flex flex-wrap items-center justify-between">
             <div class="flex items-center space-x-3 rtl:space-x-reverse gap-4">
                 <a href="" class="flex items-center space-x-3">
-                    <img src="/webcake/assets/img/istockphoto-1172329644-612x612.jpg" alt="cake" class="h-12">
+                    <img src="assets/img/Pink Brown Soft Minimalist Cute Cake Dessert Shop Logo.png" alt="" class="h-12">
                     <div>
                         <h1 class="self-center text-2xl whitespace-nowrap">WebCake</h1>
                     </div>
@@ -44,26 +44,149 @@
             </div>
         </div>
     </nav>
+    <!-- navbar -->
+
+    <!-- content -->
+    <!-- section 1-->
     <section class="hero full-screen">
-        <div class="hero-content grid max-w-screen-xl mx-auto text-left pt-20">
-            <div class="mr-auto">
-                <p class="text-md pb-2">คำแนะนำสำหรับคุณ</p>
-                <h1 class="text-4xl">เค้กสตรอเบอร์รี่</h1>
-                <p class="text-md">เค้กที่อร่อยที่สุดในประเทศไทยสำหรับเทศกาลต่าง ๆ หรือของว่างทานเล่น <br>งานวันเกิด งานแต่งงาน เค้กเราอบใหม่ทุกวันโดยใช้ส่วนผสมที่ดีที่สุด</p>
+        <div class="hero-content grid max-w-screen-xl mx-auto text-left pt-20 md:grid-cols-2">
+            <div class="mr-auto order-2 md:order-1">
+                <p class="text-md pb-2 text-red-700">คำแนะนำสำหรับคุณ</p>
+                <h1 class="text-4xl pb-2 font-bold"><span class="bg-gradient-to-r from-red-300 to-red-700 bg-clip-text text-transparent">เค้ก</span>สตรอเบอร์รี่</h1>
+                <p class="text-md pb-2">เค้กที่อร่อยที่สุดในประเทศไทยสำหรับเทศกาลต่าง ๆ หรือของว่างทานเล่น <br>งานวันเกิด งานแต่งงาน เค้กเราอบใหม่ทุกวันโดยใช้ส่วนผสมที่ดีที่สุด</p>
                 <div class="inline-flex gap-6 pt-12">
                     <a href="#" class="inline-flex items-center justify-center px-5 py-3 border-2 border-black rounded-lg">ซื้อเดี๋ยวนี้</a>
-                    <a href="#" class="inline-flex items-center justify-center">
+                    <a href="#" class="inline-flex items-center justify-center text-red-700">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-phone-call"><path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"/><path d="M14.05 2a9 9 0 0 1 8 7.94"/><path d="M14.05 6A5 5 0 0 1 18 10"/></svg>
                         <span class="ml-2">084-823-5488</span>
                     </a>
                 </div>
-                <div class="flex">
-                    <a href="#" class="inline-flex"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-arrow-down"><path d="M12 5v14"/><path d="m19 12-7 7-7-7"/></svg><span>Scroll Down</span>
-                    </a>
+                <div class="flex pt-12">
+                    <a href="#" class="inline-flex"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-arrow-down"><path d="M12 5v14"/><path d="m19 12-7 7-7-7"/></svg><span>Scroll Down</span></a>
+                </div>
+            </div>
+            <div class="order-1 md:order-2">
+                <img src="assets/img/cake.jpg" alt="" class="w-full h-auto size-max">
+            </div>
+        </div>
+    </section>
+    <!-- section 1-->
+
+    <!-- section 2 -->
+    <section class="container flex flex-col items-center justify-center max-w-screen-xl mx-auto pb-20">
+        <h1 class="text-2xl font-bold text-center pb-12">เค้กตามที่ชอบ</h1>
+        <div class="grid grid-cols-4 gap-6">
+            <div class="max-w-sm rounded-md overflow-hidden shadow-lg bg-white">
+                <img src="assets/img/600_5GNBVgfXbzu5bUtkRh6mCtqox.webp" alt="">
+                <div class="px-6 py-4 flex justify-between">
+                    <h2 class="font-bold text-xl">รวมรส 3 ปอนด์</h2>
+                    <h2 class="font-bold text-xl">ราคา</h2>
+                </div>
+            </div>
+            <div class="max-w-sm rounded-md overflow-hidden shadow-lg bg-white">
+                <img src="assets/img/600_ryqqHUdmUhrkRHxrAoGcn4KS1.jpg" alt="">
+                <div class="px-6 py-4 flex justify-between">
+                    <h2 class="font-bold text-xl">ช็อคโกแลตครีมนมสด</h2>
+                    <h2 class="font-bold text-xl">ราคา</h2>
+                </div>
+            </div>
+            <div class="max-w-sm rounded-md overflow-hidden shadow-lg bg-white">
+                <img src="assets/img/600_ir0N5pskYPtj8tfEM6KTMqe0h.jpg" alt="">
+                <div class="px-6 py-4 flex justify-between">
+                    <h2 class="font-bold text-xl">พิงค์ช็อกโกแลตบัตเตอร์</h2>
+                    <h2 class="font-bold text-xl">ราคา</h2>
+                </div>
+            </div>
+            <div class="max-w-sm rounded-md overflow-hidden shadow-lg bg-white">
+                <img src="assets/img/600_NwAX3Ve1z7029slUDYTXHyKAV.jpg" alt="">
+                <div class="px-6 py-4 flex justify-between">
+                    <h2 class="font-bold text-xl">เบอร์รี่ช็อกโกบราวนี่</h2>
+                    <h2 class="font-bold text-xl">ราคา</h2>
                 </div>
             </div>
         </div>
     </section>
+    <!-- section 2 -->
+    <section class="container flex flex-col items-center justify-center max-w-screen-xl mx-auto pb-20">
+        <h1 class="text-2xl font-bold text-center pb-12">เค้กตามที่ชอบที่สุด</h1>
+        <div class="grid grid-cols-5 gap-6">
+            <div class="max-w-sm rounded-md overflow-hidden shadow-lg bg-white">
+                <img src="assets/img/600_Tn15YtEw2hNhIurTkRvchIqce.jpg" alt="">
+                <div class="px-6 py-4 flex justify-between">
+                    <h2 class="font-bold text-xl">ช็อกโกแลต</h2>
+                    <h2 class="font-bold text-xl">ราคา</h2>
+                </div>
+            </div>
+            <div class="max-w-sm rounded-md overflow-hidden shadow-lg bg-white">
+                <img src="assets/img/600_xnxXRQaqBvYkgqaWChOdDyh2G.jpg" alt="">
+                <div class="px-6 py-4 flex justify-between">
+                    <h2 class="font-bold text-xl">ขีสเค้กหน้าไหม้</h2>
+                    <h2 class="font-bold text-xl">ราคา</h2>
+                </div>
+            </div>
+            <div class="max-w-sm rounded-md overflow-hidden shadow-lg bg-white">
+                <img src="assets/img/600_4ghwDcSBNPKK4BhzshcUFFxG9.jpg" alt="">
+                <div class="px-6 py-4 flex justify-between">
+                    <h2 class="font-bold text-xl">สตอเบอร์รี่ช็อคโกแลต</h2>
+                    <h2 class="font-bold text-xl">ราคา</h2>
+                </div>
+            </div>
+            <div class="max-w-sm rounded-md overflow-hidden shadow-lg bg-white">
+                <img src="assets/img/600_9uh8vNUyPjg0RN4p7yuLkL67a.jpg" alt="">
+                <div class="px-6 py-4 flex justify-between">
+                    <h2 class="font-bold text-xl">ผีเสื้อวานิลลานมสด</h2>
+                    <h2 class="font-bold text-xl">ราคา</h2>
+                </div>
+            </div>
+            <div class="max-w-sm rounded-md overflow-hidden shadow-lg bg-white">
+                <img src="assets/img/600_wGe2ykqjvjnPMRbpYaa9wByCH.jpg" alt="">
+                <div class="px-6 py-4 flex justify-between">
+                    <h2 class="font-bold text-xl">บัตเตอร์ช็อกโกแลตผีเสื้อ</h2>
+                    <h2 class="font-bold text-xl">ราคา</h2>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="container flex flex-col items-center justify-center max-w-screen-xl mx-auto pb-20">
+        <div class="grid grid-cols-5 gap-6">
+            <div class="max-w-sm rounded-md overflow-hidden shadow-lg bg-white">
+                <img src="assets/img/600_xiF0vNsIpqQivKtmvdQ9T8I6a.jpg" alt="">
+                <div class="px-6 py-4 flex justify-between">
+                    <h2 class="font-bold text-xl">วันเกิดผีเสื้อสีขาว</h2>
+                    <h2 class="font-bold text-xl">ราคา</h2>
+                </div>
+            </div>
+            <div class="max-w-sm rounded-md overflow-hidden shadow-lg bg-white">
+                <img src="assets/img/600_TnqEwOctoVw0T9YH5Lj2SeaP5.jpg" alt="">
+                <div class="px-6 py-4 flex justify-between">
+                    <h2 class="font-bold text-xl">เค้กข้าวเหนียวมะม่วง</h2>
+                    <h2 class="font-bold text-xl">ราคา</h2>
+                </div>
+            </div>
+            <div class="max-w-sm rounded-md overflow-hidden shadow-lg bg-white">
+                <img src="assets/img/600_s3biydEry8no6ObBrvt2yBsk8.jpg" alt="">
+                <div class="px-6 py-4 flex justify-between">
+                    <h2 class="font-bold text-xl">ช็อคโกแลตบัตเตอร์เค้ก</h2>
+                    <h2 class="font-bold text-xl">ราคา</h2>
+                </div>
+            </div>
+            <div class="max-w-sm rounded-md overflow-hidden shadow-lg bg-white">
+                <img src="assets/img/600_EAc4XXnHKt5DX9epar6jHnREm.jpg" alt="">
+                <div class="px-6 py-4 flex justify-between">
+                    <h2 class="font-bold text-xl">บราวนี่ทาวเวอร์</h2>
+                    <h2 class="font-bold text-xl">ราคา</h2>
+                </div>
+            </div>
+            <div class="max-w-sm rounded-md overflow-hidden shadow-lg bg-white">
+                <img src="assets/img/600_wdnEFaKyOHOkj03M3ASREcEIj.jpg" alt="">
+                <div class="px-6 py-4 flex justify-between">
+                    <h2 class="font-bold text-xl">เค้กวันเกิดสไตล์มินิมอล</h2>
+                    <h2 class="font-bold text-xl">ราคา</h2>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- content -->
 </body>
 
 </html>
